🐛 fix(high contrast): high contrast styles improvement for components.

--- a/packages/assets/css/src/scss/_components/_input/_modifiers/_has-icon.scss
+++ b/packages/assets/css/src/scss/_components/_input/_modifiers/_has-icon.scss
@@ -16,7 +16,6 @@
 			@include modifier(has-icon) {
 				align-items: center;
 				display: flex;
-				padding-right: 10px;
 			}
 		}
 	}
